segunda versão/ duas pgs feitas

--- a/aahome.html
+++ b/aahome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images" type="image/x-icon">
+    <link rel="shortcut icon" href="./temas/text_ad_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" type="image/x-icon">
     <link rel="stylesheet" href="./aastyle.css">
     <title>Temas Enem</title>
 </head>
