second commit/coreção de erro ao postar no vercel

--- a/alimentacao.html
+++ b/alimentacao.html
@@ -9,7 +9,7 @@
 </head>
 <body class="laranja">
     <header>
-        <a href="aahome.html" class="btn-home">
+        <a href="index.html" class="btn-home">
             <img src="./temas/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="Home">
         </a>
         <h1>Educação alimentar</h1>
