--- a/ciberseguranca.html
+++ b/ciberseguranca.html
@@ -10,7 +10,7 @@
 <body class="azul-neutro">
     
     <header>
-        <a href="aahome.html" class="btn-home">
+        <a href="index.html" class="btn-home">
             <img src="./temas/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="Home">
         </a>
         <h1>Cibersegurança</h1>
