--- a/educação.html
+++ b/educação.html
@@ -9,7 +9,7 @@
 </head>
 <body class="rosa">
     <header>
-        <a href="aahome.html" class="btn-home">
+        <a href="index.html" class="btn-home">
             <img src="./temas/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="Home">
         </a>
         <h1>Educação</h1>
