--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="logos"><a href="transito.html"><img src="./temas/educacaonotransito.png" alt="foto"></a>Trânsito</div>
         <div class="logos"><a href="etica.html"><img src="./temas/eticaecidadania.png" alt="foto"></a>Ética</div>
         
-        <div class="logos"><a href="meioAmbiente.html"><img src="./temas/meioambiente1.png" alt="foto"></a>Meio Ambiente</div>
+        <div class="logos"><a href="meioAmbiente1.html"><img src="./temas/meioambiente1.png" alt="foto"></a>Meio Ambiente</div>
+        <div class="logos"><a href="meioAmbiente2.html"><img src="./temas/meioambiente2.png" alt="foto"></a>Meio Ambiente</div>
         <div class="logos"><a href="pluralidade.html"><img src="./temas/pluralidadecultural.png" alt="foto"></a>Pluralidade</div>
         <div class="logos"><a href="saude.html"><img src="./temas/saude.png" alt="foto"></a>Saúde</div>
         </section>
